@@ -36,6 +36,7 @@ New features:
 - Nearly complete oRO and pRO support. Thanks to jojobaoil and duckieeex!
 - Display a warning if Kore is attempting to use a skill it doesn't have.
 - Using the Teleport skill will now correctly make Kore teleport.
+- Some statuses might be detected more accurately now.
 
 New config options:
 - showDomain (flag)
